Bug (**feature**) De overflow-x expandido, echado debajo de la alfombra

--- a/src/main/resources/static/css/contract.css
+++ b/src/main/resources/static/css/contract.css
@@ -19,6 +19,7 @@ body {
     background-color: var(--vortice-inversores) !important;
     color: #ffffff !important;
     font-family: 'Times New Roman', Times, serif;
+    overflow-x: hidden;
 }
 
 .text-gradient {
